--- a/ShopFilip/Views/Account/ErrorPage.cshtml
+++ b/ShopFilip/Views/Account/ErrorPage.cshtml
@@ -1,3 +1,6 @@
-﻿<div style="text-align:center; top: 50%; padding-top:20%;">
-    <h1>Sorry 404 Error apperar 😞</h1> 
+﻿@{
+    ViewData["Title"] = ViewContext.RouteData.Values["action"].ToString();
+}
+<div style="text-align:center; top: 50%; padding-top:20%;">
+    <h1>Sorry error apperar 😞</h1>
 </div>
