--- a/ShopFilip/Views/Cart/Index.cshtml
+++ b/ShopFilip/Views/Cart/Index.cshtml
@@ -70,8 +70,8 @@
                     <input type="hidden" name="BoughtProducts" value="@ViewBag.cart" />
                     <button class="btn buyButton" type="submit">
                         <span class="price">💰</span>
-                        <span class="shopping-cart"><a class="fa fa-shopping-cart" aria-hidden="true">🛍️</a></span>
-                        <a class="cart-btn" href="#">Buy!</a>
+                        <span class="shopping-cart"><i class="fa fa-shopping-cart" aria-hidden="true">🛒</i></span>
+                        Buy!
                     </button>
                 </form>
             }
