--- a/ShopFilip/Views/Account/Login.cshtml
+++ b/ShopFilip/Views/Account/Login.cshtml
@@ -3,24 +3,13 @@
 @using Microsoft.AspNetCore.Identity
 @model ShopFilip.Models.Login
 @inject SignInManager<ApplicationUser> SignInManager
-<link rel="stylesheet" type="text/css" href="~/css/Login-Register.css">
-<style>
-    .input-validation-error {
-        border-color: red;
-    }
+@{
+    ViewData["Title"] = ViewContext.RouteData.Values["action"].ToString();
+}
+@section CssLinks {
+    <link rel="stylesheet" type="text/css" href="~/css/Login-Register-Edit.css">
+}
 
-    .field-validation-error {
-        color: red;
-    }
-
-    ul {
-        list-style: outside none none;
-        padding: 0;
-        margin-bottom: 20px;
-        background-color: #f8f9fa;
-        text-align: center;
-    }
-</style>
 @if (SignInManager.IsSignedIn(User))
 {
     <div style="text-align:center; top: 50%; padding-top:20%;">
@@ -29,32 +18,32 @@
 }
 else
 {
-    <h2 class="MainText">Login</h2>
-    <form method="post" asp-controller="Account" asp-action="Login" asp-route-returnurl="@Model.ReturnUrl" class="Login">
+    <h2 class="title-header">Zaloguj się!</h2>
+    <form method="post" asp-controller="Account" asp-action="Login" asp-route-returnurl="@Model.ReturnUrl" class="form-login-register">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div>
-            <label asp-for="Username" class="control-label"></label>
+            <label asp-for="Username" class="control-label">Nazwa użytkownika</label>
             <input asp-for="Username" class="form-control" />
             <span asp-validation-for="Username" class="text-danger"></span>
         </div>
 
         <div>
 
-            <label asp-for="Password" class="control-label"></label>
+            <label asp-for="Password" class="control-label">Hasło</label>
             <input asp-for="Password" class="form-control" />
             <span asp-validation-for="Password"></span>
         </div>
 
         <div>
-            <label asp-for="RememberMe" class="control-label"></label>
+            <label asp-for="RememberMe" class="control-label">Zapamietaj w przeglądarce!</label>
             <input asp-for="RememberMe" />
             <span asp-validation-for="RememberMe"></span>
         </div>
         <div id="login-dont-have-account">
-            <input type="submit" value="Login" class="btn btn-default" id="button-login" />
             <a asp-controller="Account" asp-action="Register">
-                <input type="button" value="Don't have account?" class="btn btn-default" id="button-dont-haveaccount" />
+                <input type="button" value="Nie masz konta?" class="btn btn-default" id="button-dont-haveaccount" />
             </a>
+            <input type="submit" value="Login" class="btn btn-default" />
         </div>
     </form>
 }
