--- a/ShopFilip/Views/Admin/AddProduct.cshtml
+++ b/ShopFilip/Views/Admin/AddProduct.cshtml
@@ -1,7 +1,5 @@
 ﻿@model ShopFilip.Models.Product
 <link href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
 <style>
     input[type="file"] {
@@ -15,11 +13,11 @@
         cursor: pointer;
     }
 
-    .modal {
+    .modal-table {
         overflow: visible;
         z-index: 3;
     }
-    /* HIDE RADIO */
+
     #radio {
         position: absolute;
         opacity: 0;
@@ -27,18 +25,16 @@
         height: 0;
     }
 
-    /* IMAGE STYLES */
     [type=radio] + img {
         cursor: pointer;
         margin: 2px;
     }
 
-    /* CHECKED STYLES */
     [type=radio]:checked + img {
         outline: 2px solid #f00;
     }
 
-    .buttona {
+    .button-style {
         background-color: Crimson;
         border-radius: 5px;
         color: white;
@@ -46,7 +42,7 @@
         text-decoration: none;
     }
 
-    #photoMin {
+    #photo-min-product {
         -webkit-filter: grayscale(100%);
         filter: grayscale(100%);
     }
@@ -70,7 +66,7 @@
         cursor: pointer;
     }
 
-    #myModalSetMain {
+    #modal-set-center {
         position: absolute;
         left: 50%;
         top: 50%;
@@ -80,12 +76,12 @@
     }
 </style>
 <div class="container">
-    <h1>Add ProductsData</h1>
+    <h1>Add Product</h1>
     <form>
         <div class="row">
             <div class="col-md-4">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input hidden id="idOfProoduct" value=""/>
+                <input hidden id="idOfProoduct" value="" />
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
                     <input asp-for="@Model.Name" id="name" class="form-control" />
@@ -98,12 +94,12 @@
                 </div>
                 <div class="form-group">
                     <label class="container">
-                        Man
+                        Mężczyzna
                         <input type="radio" checked="checked" name="gender" value="man">
                         <span class="checkmark"></span>
                     </label>
                     <label class="container">
-                        Woman
+                        Kobieta
                         <input type="radio" name="gender" value="woman">
                         <span class="checkmark"></span>
                     </label>
@@ -112,30 +108,29 @@
                     <h4>Rozmiary</h4>
                     <label class="container">
                         M
-                        <input class="aa" type="checkbox" name="size" value="M">
-                        <input class="bb" style="display:none" min="0" type="number" name="quantity">
+                        <input class="size-container" type="checkbox" name="size" value="M">
+                        <input style="display:none" min="0" type="number" name="quantity">
                         <span class="checkmark"></span>
                     </label>
                     <label class="container">
                         L
-                        <input class="aa" type="checkbox" name="size" value="L">
-                        <input class="bb" style="display:none" min="0" type="number" name="quantity">
+                        <input class="size-container" type="checkbox" name="size" value="L">
+                        <input style="display:none" min="0" type="number" name="quantity">
                         <span class="checkmark"></span>
                     </label>
                     <label class="container">
                         XL
-                        <input class="aa" type="checkbox" name="size" value="XL">
-                        <input class="bb" style="display:none" min="0" type="number" name="quantity">
+                        <input class="size-container" type="checkbox" name="size" value="XL">
+                        <input style="display:none" min="0" type="number" name="quantity">
                         <span class="checkmark"></span>
                     </label>
                     <label class="container">
                         XXL
-                        <input class="aa" type="checkbox" name="size" value="XXL">
-                        <input class="bb" style="display:none" min="0" type="number" name="quantity">
+                        <input class="size-container" type="checkbox" name="size" value="XXL">
+                        <input style="display:none" min="0" type="number" name="quantity">
                         <span class="checkmark"></span>
                     </label>
                 </div>
-
                 <div class="form-group">
                     <h4>Grupa</h4>
                     <label class="container">
@@ -162,45 +157,45 @@
             </div>
             <div class="col-md-4">
                 <div class="form-group">
-                    <label asp-for="Description" class="control-label">Comment:</label>
-                    <textarea asp-for="Description" id="description" class="form-control" rows="5" ></textarea>
+                    <label asp-for="Description" class="control-label">Opis:</label>
+                    <textarea asp-for="Description" id="description" class="form-control" rows="5"></textarea>
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
-                    <label class="label" for="gallery-photo-add">Dodaj Zdjęcia</label>
-                    <input type="file" name="pic" multiple id="gallery-photo-add">
-                    <div class="gallery" id="gal">
-                     
+                    <label class="label" for="gallery-photo-add">Dodaj Zdjęcia:</label>
+                    <input type="file" multiple id="gallery-photo-add">
+                    <div class="gallery">
+
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <input asp-for="Table" name="tbl" id="table-photo-add" value="Table" hidden>
-                    <div id="tableAdded">
-                      
+                    <input asp-for="Table" id="table-photo-add" value="Table" hidden>
+                    <div id="table-added">
+
                     </div>
                 </div>
-                <p><a class="buttona" href="#ex1" id="bb" rel="modal:open">Dodaj Tabele</a></p>
+                <p><a class="button-style" href="#modal-open" id="add-table" rel="modal:open">Dodaj Tabele</a></p>
             </div>
             <div class="form-group">
-                <input type="button" onClick='submitDetailsForm()' class="btn btn-default" />
+                <input type="button" id="submit-form" class="btn btn-default" />
             </div>
         </div>
     </form>
-    <div id="ex1" class="modal">
+    <div id="modal-open" class="modal-table">
         <p>Wybierz już istniejącą tabele</p>
         <div id="photos">
 
         </div>
-        <a class="buttona" href="#" rel="modal:close" id="ggg">Add Table</a>
-        <label class="label" for="addNewToTable">Dodaj Nową tabele</label>
-        <input type="file" name="pic" id="addNewToTable">
+        <a class="button-style" href="#" rel="modal:close" id="button-add-table">Add Table</a>
+        <label class="label" for="add-new-table">Dodaj Nową tabele</label>
+        <input type="file" id="add-new-table">
     </div>
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="myModalSetMain">
+<div class="modal fade" id="modal-set-center">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
@@ -212,10 +207,42 @@
         </div>
     </div>
 </div>
-
+@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>*@
 <script src="~/lib/jquery/dist/jquery.js"></script>
 <script>
-    $('.aa').change(function () {
+    $("#submit-form").click(function () {
+        SubmitForm()
+    });
+
+    $("#add-table").click(function () {
+        GetTables()
+    });
+
+    $("#button-add-table").click(function () {
+        var a = $('input[name="test"]:checked').val();
+        document.getElementById('table-photo-add').defaultValue = a;
+        $("#table-added").append("<p>Dodano tabele: </p>" + a)
+    });
+
+    $('body').on('click', '#x', function () {
+        $(this).closest('div').remove();
+        let removePhoto = $(this).closest('div').children().eq(1).attr("src")
+        $.ajax({
+            url: "/Admin/RemoveFromDatabase",
+            type: "POST",
+            data: { 'path': removePhoto },
+            dataType: 'text',
+            success: function () {
+                if (response.success) {
+                    $("#getCode").html(resp);
+                    $("#getCodeModal").modal('show');
+                }
+            },
+        });
+    });
+
+    $('.size-container').change(function () {
         if (this.checked) {
             $(this).nextAll('input').first().show();
         }
@@ -224,30 +251,10 @@
         }
     });
 
-    $('body').on('click', '#x', function () {
-        $(this).closest('div').remove();
-        var a = $(this).closest('div').children().eq(1).attr("src")
-        console.log(a)
-        $.ajax({
-            url: "/Admin/RemoveFromDatabase",
-            type: "POST",
-            data: { 'path': a },
-            dataType: 'text',
-            success: function () {
-                if (response.success) {
-                    console.log("siemano");
-                    $("#getCode").html(resp);
-                    $("#getCodeModal").modal('show');
-                }
-            },
-        });
-    });
-
     $("#gallery-photo-add").change(function () {
-        var files = document.getElementById('gallery-photo-add').files;
-        console.log("files: " + files)
+        let files = document.getElementById('gallery-photo-add').files;
+        let data = new FormData();
 
-        var data = new FormData();
         for (var i = 0; i < files.length; i++) {
             data.append(files[i].name, files[i]);
         }
@@ -259,28 +266,50 @@
             contentType: false,
             success: function (response) {
                 for (var i = 0; i < response.length; i++) {
-                    imagesPreview(response[i], 'div.gallery');
+                    ImagesPreview(response[i], 'div.gallery');
                 }
             },
         });
     });
 
-    function imagesPreview(input, placeToInsertImagePreview) {
-        $(placeToInsertImagePreview).append("<div id='photo'><input id='x' type='button' value='X'><img name='zdj' width='100px' id='photoMin' src='" + input + "'></div>");
+    $("#add-new-table").change(function () {
+        let fileUpload = $("#add-new-table").get(0);
+        let files = fileUpload.files;
+        let data = new FormData();
+
+        for (var i = 0; i < files.length; i++) {
+            data.append(files[i].name, files[i]);
+        }
+
+        $.ajax({
+            url: "/Admin/AddNewTable",
+            type: "POST",
+            data: data,
+            processData: false,
+            contentType: false,
+            success: function () {
+
+            },
+        });
+        GetTables();
+    });
+
+
+    function ImagesPreview(input, placeToInsertImagePreview) {
+        $(placeToInsertImagePreview).append("<div id='photo'><input id='x' type='button' value='X'><img name='photo-of-product' width='100px' id='photo-min-product' src='" + input + "'></div>");
     }
 
-    function submitDetailsForm() {
+    function SubmitForm() {
         let group = $("input[name='group']:checked").val();
         let gender = $("input[name='gender']:checked").val();
         let size = $("input[name='size']:checked").map(function () { return $(this).val(); }).get();
+        let quantity = $("input[name='quantity']").map(function () { return $(this).val(); }).get()
         let table = document.getElementById("table-photo-add").value;
         let name = $("#name").val()
         let price = $("#price").val()
         let description = $("#description").val().replace(/\n/g, "<br>")
-        let quantity = $("input[name='quantity']").map(function () { return $(this).val(); }).get()
-        let photos = $("img[name='zdj']").map(function () { return $(this).attr("src"); }).get()
+        let photos = $("img[name='photo-of-product']").map(function () { return $(this).attr("src"); }).get()
         let id = $("#idOfProoduct").val();
-
 
         var myData = {
             Id: id,
@@ -295,7 +324,6 @@
             Photos: photos,
         }
 
-        console.log(myData)
         $.ajax({
             url: '/Admin/AddNewProduct',
             type: 'POST',
@@ -306,7 +334,7 @@
                 console.log("siemano");
                 if (response.success) {
                     console.log("siemano");
-                    $('#myModalSetMain').modal('show');
+                    $('#modal-set-center').modal('show');
                 }
             },
         });
@@ -314,15 +342,12 @@
 
     $(function () {
         var imagesPreview = function (input, placeToInsertImagePreview) {
-
             if (input.files) {
-                var filesAmount = input.files.length;
-
+                let filesAmount = input.files.length;
                 for (i = 0; i < filesAmount; i++) {
                     var reader = new FileReader();
-
                     reader.onload = function (event) {
-                        $(placeToInsertImagePreview).append("<div id='photo'><input id='x' type='button' value='X'><img name='zdj' width='100px' id='photoMin' src='" + event.target.result + "'></div>");
+                        $(placeToInsertImagePreview).append("<div id='photo'><input id='x' type='button' value='X'><img name='zdj' width='100px' id='photo-min-product' src='" + event.target.result + "'></div>");
                     }
                     reader.readAsDataURL(input.files[i]);
                 }
@@ -343,36 +368,6 @@
             }
         })
     }
-     
-    $("#bb").click(function () {
-        GetTables()
-    });
-
-    $("#addNewToTable").change(function () {
-        var fileUpload = $("#addNewToTable").get(0);
-        var files = fileUpload.files;
-        var data = new FormData();
-        for (var i = 0; i < files.length; i++) {
-            data.append(files[i].name, files[i]);
-        }
-        $.ajax({
-            url: "/Admin/AddNewToTable",
-            type: "POST",
-            data: data,
-            processData: false,
-            contentType: false,
-            success: function () {
-                console.log("a")
-            },
-        });
-        GetTables();
-    });
-
-    $("#ggg").click(function () {
-        var a = $('input[name="test"]:checked').val();
-        document.getElementById('table-photo-add').defaultValue = a;
-        $("#tableAdded").append("<p>Dodano tabele: </p>" + a)
-    });
 </script>
 
 
