--- a/ShopFilip/Views/Home/MainPage.cshtml
+++ b/ShopFilip/Views/Home/MainPage.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     Layout = "_Layout";
+    ViewData["Title"] = ViewContext.RouteData.Values["action"].ToString();
 }
 @model IEnumerable<Product>
 <link rel="stylesheet" type="text/css" href="~/css/CarouselMainPage.css">
@@ -13,10 +14,10 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <a asp-area="" asp-controller="Product" asp-action="MenMainPAge"><img src="~/Photos/2 — kopia (2).jpg" style=" width:100%; height:50%;"></a>
+                <a asp-controller="Product" asp-action="MenMainPAge"><img src="~/Photos/2 — kopia (2).jpg" style=" width:100%; height:50%;"></a>
             </div>
             <div class="carousel-item">
-                <a asp-area="" asp-controller="Product" asp-action="WomanMainPAge"><img src="~/Photos/2 — kopia.jpg" style=" width:100%; height:50%; "></a>
+                <a asp-controller="Product" asp-action="WomanMainPAge"><img src="~/Photos/2 — kopia.jpg" style=" width:100%; height:50%; "></a>
             </div>
         </div>
 
@@ -58,7 +59,7 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script>
     $(document).ready(function () {
-       
+
         eventThrottler();
     });
 
@@ -75,7 +76,7 @@
             eventTimeout = setTimeout(function () {
                 eventTimeout = null;
                 lazyLoad();
-            }, 1000);
+            }, 100);
         }
     };
 
