--- a/ShopFilip/Views/Product/ProductInfo.cshtml
+++ b/ShopFilip/Views/Product/ProductInfo.cshtml
@@ -66,14 +66,18 @@
         </div>
     </div>
 </div>
-<h1 style="margin-top:40px;margin-bottom:40px;">Tabela rozmiarów</h1>
-<div class="photoContainer">
-    <img class="product-image" src="@Html.DisplayFor(modelItem => Model.Table)" alt="">
+<div class="container">
+    <h1 style="margin-top:40px;margin-bottom:40px;">Tabela rozmiarów</h1>
+    <div class="photoContainer">
+        <img class="product-image" src="@Html.DisplayFor(modelItem => Model.Table)" alt="">
+    </div>
 </div>
 
+
+
 @section Scripts {
-<script src="~/lib/jquery/dist/jquery.js"></script>
-<script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script>
     jQuery('<div class="quantity-nav"><div class="quantity-button quantity-up">+</div><div class="quantity-button quantity-down">-</div></div>').insertAfter('.quantity input');
     jQuery('.quantity').each(function() {
         var spinner = jQuery(this),
@@ -157,7 +161,7 @@
             }
         });
     });
-</script>
+    </script>
 }
 
 
