--- a/ShopFilip/Views/Product/SuggestedProducts.cshtml
+++ b/ShopFilip/Views/Product/SuggestedProducts.cshtml
@@ -5,7 +5,7 @@
     @foreach (var product in Model)
     {
         <div class="col-md-4 product-grid">
-            @Html.Partial("~/Views/Product/_ProductThumbnail.cshtml", product)
+            @Html.PartialAsync("~/Views/Product/_ProductThumbnail.cshtml", product)
         </div>
     }
 </div>
