Small Changes in editing product

--- a/ShopFilip/Views/Account/MyOrders.cshtml
+++ b/ShopFilip/Views/Account/MyOrders.cshtml
@@ -60,8 +60,6 @@
         </table>
     }
 </div>
-<script>
-    function goBack() {
-        window.history.back();
-    }
-</script>
+@section Scripts {
+    <script src="~/js/CustomJavaScripts.js"></script>
+}
