--- a/ShopFilip/Views/Admin/AddProduct.cshtml
+++ b/ShopFilip/Views/Admin/AddProduct.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ShopFilip.Models.Product
-<link href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+@*<link href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">*@
+@*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />*@
 <style>
     input[type="file"] {
         display: none;
@@ -194,7 +194,6 @@
     </div>
 </div>
 
-<!-- Modal -->
 <div class="modal fade" id="modal-set-center">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -207,9 +206,6 @@
         </div>
     </div>
 </div>
-@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>*@
-<script src="~/lib/jquery/dist/jquery.js"></script>
 <script>
     $("#submit-form").click(function () {
         SubmitForm()
@@ -362,8 +358,9 @@
     function GetTables() {
         $('div#photos').empty();
         $.getJSON("/Admin/GetAllTables", function (response) {
+            console.log(response)
             for (var i = 0; i < response.length; i++) {
-                var res = response[i].replace("C:\\Users\\Filip\\source\\repos\\ShopFilip\\ShopFilip\\wwwroot", "");
+                var res = response[i].replace("C:\Users\Filip\source\repos\Shop\OnlineShop\ShopFilip\wwwroot", "");
                 $('div#photos').append('<label> <input type="radio" id="radio" name="test" value="' + res + '"  > <img  height="100px" src="' + res + '"></label>')
             }
         })
