--- a/ShopFilip/Views/Admin/Index.cshtml
+++ b/ShopFilip/Views/Admin/Index.cshtml
@@ -26,6 +26,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a asp-controller="Admin" asp-action="addproduct" class="nav-link">
+                            <span data-feather="plus-circle"></span>
+                            Dodaj nowy produkt
+                        </a>
+                    </li> 
+                    <li class="nav-item">
                         <a asp-controller="Admin" asp-action="GetCustomers" class="nav-link">
                             <span data-feather="users"></span>
                             Klienci
@@ -36,7 +42,7 @@
                 <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
                     <span>Saved reports</span>
                     <a class="d-flex align-items-center text-muted" href="#">
-                        <span data-feather="plus-circle"></span>
+                        
                     </a>
                 </h6>
                 <ul class="nav flex-column mb-2 ">
